--- a/exer3/designWebpage/styles.css
+++ b/exer3/designWebpage/styles.css
@@ -11,6 +11,12 @@
     gap: 20px;
 }
 
+.google {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
 .nav-links {
     display: flex;
     gap: 20px;
@@ -74,5 +80,86 @@ body {
 .search-btn:hover {
     background-color: blue;
     color: white
+}
+
+
+.top-search {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.main-hr {
+    width: 90%;
+    margin: 0 auto 40px auto;
+    border: 1px solid #222;
+}
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px;
+    margin: 0 5vw;
+}
+
+.info-sections {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    flex: 2;
+}
+
+.info-card {
+    background: #ddd;
+    padding: 20px 30px;
+    border-radius: 10px;
+}
+
+.info-card h2 {
+    color: #2366e8;
+    margin-bottom: 10px;
+}
+
+.info-card p {
+    color: #000000;
+    margin: 0;
+}
+
+.profile-card {
+    background: #4b003b;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 250px;
+    max-width: 320px;
+}
+
+.profile-img {
+    width: 90%;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    border: 5px solid #fff;
+    object-fit: cover;
+}
+
+.profile-desc {
+    color: #fff;
+    text-align: left;
+}
+
+.search-display {
+    font-size: 2rem;
+    flex: 1;
+    gap: 30px;
+    display: flex;
+    justify-content: center;
+    background-color: gray;
+    border-radius: 30px;
+    border: 2px solid black;
+    width: 80%;
+    margin: 0 auto;
 }
 
