Updated ui to align with mockup for buttons

--- a/exer5/pokedex/src/App.css
+++ b/exer5/pokedex/src/App.css
@@ -1,9 +1,15 @@
 
 
+h1 {
+  text-align: center;
+}
+
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 20px;
+  width: 30vw;
+  margin: 0 auto;
 }
 
 .column {
