--- a/exer5/pokedex/src/App.css
+++ b/exer5/pokedex/src/App.css
@@ -8,13 +8,13 @@ h1 {
   display: flex;
   justify-content: center;
   gap: 20px;
-  width: 30vw;
+  width: 50vw;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .column {
   flex: 1;
   padding: 15px;
-  border: 1px solid #000000;
   background-color: #ffffff;
 }
